--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>
-<a id="welcome-to-the-luniserver-project" class="anchor" href="#welcome-to-the-luniserver-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the LUNIServer project.</h3>
-
-<hr>
-
-<p>The LEGO Group has not endorsed or authorized the operation of this game and is not liable for any safety issues in relation to the operation of this game.</p>
+          <h3><a id="welcome-to-the-luniserver-project" class="anchor" href="#welcome-to-the-luniserver-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the LUNIServer project.</h3>
+          LUNIServer is a free & open-source piece of software that aims to replace the original server network of the game LEGO Universe.
+          <hr>
+          <p>The LEGO Group has not endorsed or authorized the operation of this game and is not liable for any safety issues in relation to the operation of this game.</p>
         </section>
 
         <aside id="sidebar">
